# sgminer-dev

./: .gitignore  .gitmodules  CMakeLists.txt  COMPONENTS.md  Makefile.am  README.md  algorithm.c  algorithm.h  authors.md  build.sh  config_parser.c  config_parser.h  configure.ac  driver-opencl.c  driver-opencl.h  events.c  findnonce.c  findnonce.h  logging.c  logging.h  miner.h  ocl.c  ocl.h  pool.c  pool.h  sgminer.c  startlocalsgminer  util.c  util.h
algorithm/: animecoin.c  animecoin.h  bitblock.c  bitblock.h  blake256.c  blake256.h  blakecoin.c  blakecoin.h  cn-aes-tbls.h  credits.c  credits.h  cryptonight.c  cryptonight.h  darkcoin.c  darkcoin.h  decred.c  decred.h  eth-sha3.c  eth-sha3.h  ethash.c  ethash.h  ethgencache.c  fresh.c  fresh.h  fuguecoin.c  fuguecoin.h  groestlcoin.c  groestlcoin.h  inkcoin.c  inkcoin.h  lbry.c  lyra2.c  lyra2rev2.c  lyra2rev2.h  marucoin.c  marucoin.h  maxcoin.c  maxcoin.h  myriadcoin-groestl.c  myriadcoin-groestl.h  (+30 more)
api/: api.c  api.h
api/examples/: sgminer-api
ccan/: CMakeLists.txt
cmake/: config.h.cmake
cmake/Modules/: FindCurses.cmake  FindJansson.cmake  FindOpenCL.cmake
doc/: COMPONENTS.md  COMPONENTS.md.save
examples/: sgminer-nocfg-multipool-etc
functions/config/: config_parser.c  config_writer.c
functions/libcurl/: exsgminer.c  remote-config.c  util.c
include/: CMakeLists.txt  elist.h
junkcode/: Makefile.am  build  build-debug  build-fast  build-native  lyra2.h  lyra2re.c  lyra2re.h  sponge.c  yescrypt.c  yescrypt_core.h
junkcode/lib/: Makefile.am
junkcode/lib2/pkgconfig/: jansson.pc
m4/: libtool.m4
ocl/: binary_kernel.c  build_kernel.c  build_kernel.h
sph/: CMakeLists.txt
